<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_color"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/main_linearlayout_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context=".MainActivity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_number_of_colors"
                android:textAppearance="?android:textAppearanceSmall" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/answer_number_of_colors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/answer_number_of_colors"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_button_0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:buttonTint="@color/radio_button_color"
                        android:text="@string/number_6"
                        android:textAppearance="?android:textAppearanceSmall" />

                    <RadioButton
                        android:id="@+id/radio_button_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:buttonTint="@color/radio_button_color"
                        android:text="@string/number_7"
                        android:textAppearance="?android:textAppearanceSmall" />

                    <RadioButton
                        android:id="@+id/radio_button_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:buttonTint="@color/radio_button_color"
                        android:text="@string/number_8"
                        android:textAppearance="?android:textAppearanceSmall" />
                </RadioGroup>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/question_end_colors" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/answer_end_colors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="28dp"
                    android:layout_toRightOf="@+id/answer_end_colors"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkbox_red"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/checkbox_color"
                        android:text="@string/checkbox_red" />

                    <CheckBox
                        android:id="@+id/checkbox_blue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/checkbox_color"
                        android:text="@string/checkbox_blue" />

                    <CheckBox
                        android:id="@+id/checkbox_violet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/checkbox_color"
                        android:text="@string/checkbox_violet" />
                </LinearLayout>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/question_not_found_color" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/answer_not_found_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer" />

                <Spinner
                    android:id="@+id/spinner_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_toRightOf="@+id/answer_not_found_color"
                    android:backgroundTint="@color/checkbox_color"
                    android:paddingRight="5dp"
                    android:spinnerMode="dropdown" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/question_secondary_rainbow" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/answer_secondary_rainbow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer" />

                <ToggleButton
                    android:id="@+id/toggle_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="35dp"
                    android:layout_toRightOf="@+id/answer_secondary_rainbow"
                    android:background="@color/checkbox_color"
                    android:textOff="@string/toggle_turn_off"
                    android:textOn="@string/toggle_turn_on" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/question_secondary_rainbow_color_order" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/answer__secondary_rainbow_color_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer" />

                <EditText
                    android:id="@+id/edit_text_field"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_toRightOf="@+id/answer__secondary_rainbow_color_order"
                    android:backgroundTint="@color/checkbox_color"
                    android:maxLength="3" />
            </RelativeLayout>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@color/submit_button"
            android:onClick="submitButtonPressed"
            android:text="@string/submit"
            android:textAllCaps="true" />
    </RelativeLayout>

</ScrollView>